# AiNews

./: .gitignore  CLAUDE_RULES.md  Claude.md
MVP/: README.md  com.newsscheduler.agent.plist  pyproject.toml  requirements.txt  setup_autostart.sh  start_scheduler.sh  start_web.sh  stop_scheduler.sh  view_logs.sh
MVP/config/: settings.yaml.example
MVP/docs/技术设计/: 技术设计文档_v1.0.md  技术设计文档_v1.1.md
MVP/docs/需求文档/: PRD-MVP-新闻爬虫与AI整理系统_v1.0.md  PRD-MVP-新闻爬虫与AI整理系统_v1.1.md  PRD-MVP-新闻爬虫与AI整理系统_v1.2.md  需求简述.md
MVP/docs/项目总结/: Sprint-技术总结与使用说明_v1.0.md  Sprint-问题总结与规避方案_v1.0.md
MVP/src/: check_sites.py  debug_crawler.py  run_once.py  run_with_mock.py  test_notification.py
MVP/src/news_agent/: config.py  main.py  pipeline.py  scheduler.py
MVP/src/news_agent/crawlers/: __init__.py  aiera.py  base.py  kr36.py  qbit.py  radar.py
MVP/src/news_agent/llm/: __init__.py  base.py  client.py
MVP/src/news_agent/models/: __init__.py  news.py
MVP/src/news_agent/notifiers/: __init__.py  base.py  email_163.py  feishu.py
MVP/src/news_agent/storage/: __init__.py  database.py  repository.py
MVP/src/news_agent/utils/: __init__.py  deduplication.py  logger.py
MVP/src/news_agent/web/: __init__.py  app.py
MVP/src/news_agent/web/static/css/: style.css
MVP/src/news_agent/web/templates/: index.html
MVP/src/tests/: test_config.py  test_crawlers.py  test_deduplication.py  test_integration.py  test_llm.py  test_llm_enhanced.py  test_notifiers.py  test_notifiers_enhanced.py  test_pipeline.py  test_repository.py  test_scheduler.py  test_scheduler_enhanced.py  test_web_config.py
